[package]
name = "storethehash"
version = "0.1.0"
authors = ["Volker Mische <volker.mische@gmail.com>"]
edition = "2018"
description = "Storage for hashes, targeted at content addressable systems."
license = "MIT OR Apache-2.0"
repository = "https://github.com/vmx/storethehash/"
keywords = ["database", "persistence", "content-addressable"]
categories = ["database-implementations"]

[dependencies]
thiserror = "1.0.22"
log = "0.4.11"
io-streams = "0.11.0"
system-interface = "0.20.0"
bytes = "1.1.0"

[dev-dependencies]
tempfile = "3.1.0"
cid = { version = "0.6.0", default-features = false, features = ["std"] }
fil_logger = "0.1.2"
serde_json = "1.0.59"
storethehash-primary-cid = { version = "0.1.0", path = "primary/cid" }
storethehash-primary-inmemory = { version = "0.1.0", path = "primary/inmemory" }
criterion = "0.3.5"
rand = "0.8.5"

[workspace]
members = [
  "db/cid-ffi",
  "primary/cid",
  "primary/inmemory",
]


[[bench]]
name = "fs"
harness = false

[features]
